# asimov

./: .coveragerc  .gitignore  pyproject.toml  pytest.ini
src/asimov/: __init__.py
src/asimov/estudos/codigos_tutoriais/: desafio_entrevista.py  hello_world.py
src/asimov/estudos/consumo_api_openia/: 04_aula.ipynb  05_aula.ipynb  06_aula.ipynb  06_aula.py  07_aula_desafio_chat_bot.ipynb  07_aula_desafio_chat_bot.py  08_aula.ipynb  09_aula_desafio_chat_bot_finance.ipynb  09_aula_desafio_chat_bot_finance.py  13_aula.ipynb  14_aula.ipynb  14_aula_atualizada.ipynb  15_aula_atualizada.ipynb  requirements.txt
src/asimov/estudos/primeiro_dashboard/: spotfy_dashboard.py
src/asimov/estudos/primeiro_dashboard/pages/: pages2.py
src/asimov/projetos/streamlit_fifa/: main.py
src/asimov/projetos/streamlit_fifa/app/features/: features_presenter.py
src/asimov/projetos/streamlit_fifa/app/features/ler_csv_fifa/datasource/: load_csv_pandas_datasource.py
src/asimov/projetos/streamlit_fifa/app/features/ler_csv_fifa/domain/models/: fifa_player.py
src/asimov/projetos/streamlit_fifa/app/features/ler_csv_fifa/domain/usecase/: ler_csv_fifa_usecase.py
src/asimov/projetos/streamlit_fifa/app/ui/pages/: home.py  players.py  teams.py
src/asimov/projetos/streamlit_fifa/app/utils/: erros.py  parameters.py  types.py
tests/asimov/projetos/streamlit_fifa/: main_test.py
tests/asimov/projetos/streamlit_fifa/app/features/: features_presenter_test.py
tests/asimov/projetos/streamlit_fifa/app/features/ler_csv_fifa/datasource/: load_csv_pandas_datasource_test.py
(+1 files in other folders)
